static/styles.css
/* ... */
/* spacing for policy items on policy list */
.tile-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

/* background tile for policy items */
.tile-info {
  background-color: var(--background-transparent);
  width: 20%;
  height: 350px;
  border-radius: 15px;
  overflow: hidden;
}

/* style for text on policy info page */
.tile-text {
  color: var(--dark);
  display: flex;
  text-transform: uppercase;
  font-weight: 200;
  padding-left: 30px;
  line-height: 40px;
  margin-top: 20px;
}

/* style for list items on policy list */
.policy-info-list {
  color: var(--dark);
  list-style: none;
  font-weight: 200;
}

.policy-info-list-gray i {
  color: var(--border-transparent);
  list-style: none;
  font-weight: 200;
  line-height: 30px;
}

.policy-info-list-gray {
  color: var(--border-transparent);
  list-style: none;
  font-weight: 200;
  line-height: 30px;
  margin-bottom: 0px;
  padding-bottom: 0px;
}
/* highlights price text on policy list */
.price-highlight {
  color: var(--dark);
  font-weight: 500;
}

/* style for icons on policy list */
.fa-lock {
  color: var(--dark);
  padding-right: 10px;
}

.fa-heart-crack {
  color: var(--dark);
  padding-right: 10px;
}

#fa-heart-crack-gray {
  color: var(--border-transparent);
  padding-right: 10px;
}

.fa-droplet {
  color: var(--dark);
  padding-right: 10px;
}
/*  */
#fa-droplet-gray {
  color: var(--border-transparent);
  padding-right: 10px;
}

.fa-square-caret-up {
  color: var(--dark);
  padding-right: 10px;
}

#fa-square-caret-up-gray {
  color: var(--border-transparent);
  padding-right: 10px;
}

/* policy button styling */
.btn-outline-primary {
  width: 50%;
  background-color: var(--background-transparent);
  margin-left: 4px;
  margin-top: 17px;
}

/* styling for image on partner page */
.tile-img {
  height: 40%;
  width: 100%;
  object-fit: cover;
}

/* styling for body text on partner page */
.tile-body-text {
  color: var(--dark);
  display: flex;
  align-items: center;
  padding-left: 15px;
  padding-right: 10px;
  font-weight: 200;
  font-size: small;
  line-height: 20px;
}

/* input for faq page */
.faq-input {
  display: none;
}

/* label for faq page */
.faq-label {
  display: block;
  padding: 8px 22px;
  margin: 0 0 1px 0;
  cursor: pointer;
  background: var(--background-transparent);
  border-radius: 3px;
  color: var(--dark);
  transition: ease 0.5s;
  min-width: fit-content;
  max-width: 100%;
}

/* label hover for faq button*/
.faq-label:hover {
  background: var(--dark);
  color: var(--white);
}
/*
faq cntent styling */
.faq-content {
  background: #e2e5f6;
  padding: 10px 25px;
  border: 1px solid #a7a7a7;
  margin: 0 0 1px 0;
  border-radius: 3px;
  max-width: 100%;
}

.faq-input + .faq-label + .faq-content {
  display: none;
}

.faq-input:checked + .faq-label + .faq-content {
  display: block;
}

.faq-body {
  max-width: 90%;
  padding-left: 100px;
}

.account-details-profile-pic {
  width: 7.5em;
  border-radius: 50%;
}

.acc-details-card {
  background-color: var(--background-transparent);
  width: 45vw;
  padding: 2em 4em;
  box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
  border-radius: 1.5em;
}

.acc-details-form {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin: 0;
  padding: 0;
}

.acc-details-form h4 {
  font-weight: 400;
}

.acc-details-btn {
  margin-top: 1em;
  padding: 0.75em;
  width: 100%;
  border-radius: 0.5em;
  border: 0.1em solid var(--border-transparent);
  font-family: "Roboto", sans-serif;
  background-color: var(--border-opaque);
  color: var(--white);
}

.acc-details-btn:hover {
  background-color: var(--white);
  color: var(--border-opaque);
  cursor: pointer;
}

.acc-details-form-label {
  margin-bottom: 1.5em;
}

.acc-details-greeting {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 3em;
}

.acc-details-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.login-form {
  margin: 2em 0em;
}
.contact-form {
  margin: 2em 0em;
}

.signup-form {
  margin: 2em 0em;
}

.image-name {
  display: grid;
  justify-content: center;
  justify-content: space-between;
}

.amount-approved {
  display: flex;
}

.list-of-benefits {
  padding-left: 0px;
}

